Fixed text inheriting wrong color

--- a/checkout.css
+++ b/checkout.css
@@ -319,6 +319,7 @@ span.btn-text {
 }
 
 .gift-template-holder {
+  color: #4d4d44;
   margin-bottom: 1.25rem;
 }
 
